objects/Budget_Approver__c/Budget_Approver__c.object-meta.xml
<CustomObject>
    <label>Budget Approver</label>
    <nameField>
        <displayFormat>BA-{000}</displayFormat>
        <label>Budget Approvers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>