objects/Budget_Approver__c/fields/Budget_E_Staff__c.field-meta.xml
<CustomField>
    <fullName>Budget_E_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget E Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget_Approvers2</relationshipName>
    <type>Lookup</type>
</CustomField>