objects/Budget_Approver__c/fields/Budget_Finance_Approver__c.field-meta.xml
<CustomField>
    <fullName>Budget_Finance_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Finance Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget_Approvers3</relationshipName>
    <type>Lookup</type>
</CustomField>