objects/Budget_Approver__c/fields/Budget_Owner__c.field-meta.xml
<CustomField>
    <fullName>Budget_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget_Approvers1</relationshipName>
    <type>Lookup</type>
</CustomField>