objects/Budget_Approver__c/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Budget_Approvers4</relationshipName>
    <type>Lookup</type>
</CustomField>