objects/Budget_Approver__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Department__c</columns>
    <columns>Business_Region__c</columns>
    <columns>Budget_Requestor__c</columns>
    <columns>Budget_Owner__c</columns>
    <columns>Budget_E_Staff__c</columns>
    <columns>Budget_Finance_Approver__c</columns>
    <columns>Receiver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>